jenkins/jenkins-contour-可选.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: jenkins-http-ingress
  namespace: zws
spec:
  ingressClassName: contour    
  virtualhost:
    fqdn: zws.jenkins.baway.org.cn
  routes:
  - conditions:               
    - prefix: /            
    services:                 
    - name: jenkins
      port: 8080
